Few moe bug fixes for fonts

--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -24,6 +24,7 @@
   .rt-tbody {
     text-align: center;
     .rt-td {
+      font-size: 0.9em;
       overflow: inherit !important;
       white-space: inherit !important;
     }
