--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -17,6 +17,7 @@
 .ReactTable .rt-tbody {
   text-align: center; }
   .ReactTable .rt-tbody .rt-td {
+    font-size: 0.9em;
     overflow: inherit !important;
     white-space: inherit !important; }
   .ReactTable .rt-tbody .rowHighliter .rt-td {
