--- a/client/src/index.css
+++ b/client/src/index.css
@@ -365,7 +365,6 @@
     :global .actions span {
       margin-left: 3px; }
     :global .actions .btn {
-      font-size: 0.9em !important !important;
       color: #666;
       padding: 3px 9px;
       line-height: 1.5;
@@ -376,7 +375,8 @@
       -moz-transition: all 0.2s ease-in-out;
       -o-transition: all 0.2s ease-in-out;
       -webkit-transition: all 0.2s ease-in-out;
-      transition: all 0.2s ease-in-out; }
+      transition: all 0.2s ease-in-out;
+      font-size: 0.8em !important; }
     :global .actions .btn:hover {
       background-position: 100% 0;
       -moz-transition: all 0.2s ease-in-out;
@@ -651,7 +651,6 @@
         margin-right: 10px;
         margin-left: 0px; }
       :global .algaeh-modal .popupFooter .btn {
-        font-size: 0.9em !important !important;
         float: right;
         min-width: 70px;
         padding: 4px 10px;
@@ -668,6 +667,7 @@
         -webkit-transition: width 2s;
         /* Safari */
         transition: width 2s;
+        font-size: 0.8em !important;
         cursor: pointer; }
         :global .algaeh-modal .popupFooter .btn:hover {
           background-position: 100% 0;
