--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -568,7 +568,6 @@
     }
 
     .btn {
-      font-size: 0.9em !important !important;
       color: #666;
       padding: 3px 9px;
       line-height: 1.5;
@@ -581,6 +580,7 @@
       -o-transition: all 0.2s ease-in-out;
       -webkit-transition: all 0.2s ease-in-out;
       transition: all 0.2s ease-in-out;
+      font-size: 0.8em !important;
       i {
       }
     }
@@ -935,7 +935,6 @@
         margin-left: 0px;
       }
       .btn {
-        font-size: 0.9em !important !important;
         float: right;
         min-width: 70px;
         padding: 4px 10px;
@@ -952,6 +951,7 @@
         min-width: 31px;
         -webkit-transition: width 2s; /* Safari */
         transition: width 2s;
+        font-size: 0.8em !important;
         cursor: pointer;
         &:hover {
           background-position: 100% 0;
