--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -23,7 +23,6 @@ body {
     color: #b4b4b4 !important; }
 
 :global .btn {
-  font-size: 0.9em !important !important;
   padding: 5px 10px;
   text-transform: uppercase;
   background-size: 300% 100%;
@@ -35,7 +34,8 @@ body {
   min-width: 31px;
   -webkit-transition: width 2s;
   /* Safari */
-  transition: width 2s; }
+  transition: width 2s;
+  font-size: 0.8em !important; }
   :global .btn i {
     text-shadow: 0px 1px 1px #1a1a1a; }
 
