--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -26,7 +26,6 @@ body {
     }
   }
   .btn {
-    font-size: 0.9em !important !important;
     padding: 5px 10px;
     text-transform: uppercase;
     background-size: 300% 100%;
@@ -38,6 +37,7 @@ body {
     min-width: 31px;
     -webkit-transition: width 2s; /* Safari */
     transition: width 2s;
+    font-size: 0.8em !important;
     i {
       text-shadow: 0px 1px 1px lighten($color-black, 10%);
     }
