--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -29,7 +29,8 @@ header {
 .topNavbar-title {
   margin: 0;
   padding: 0;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2); }
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  font-size: 1.2em; }
 
 .appLogoCntr {
   width: 115px;
