--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -35,6 +35,7 @@ header {
   margin: 0;
   padding: 0;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  font-size: 1.2em;
 }
 .appLogoCntr {
   width: 115px;
