--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
@@ -8,7 +8,6 @@
       }
     }
     span {
-      
       margin: 0 10px;
     }
   }
@@ -71,22 +70,43 @@
           }
         }
       }
-      .week-off {
+      .dayTypeCntr {
         height: 0.3rem;
         .progress-bar {
-          background-color: #ffeba0 !important;
+          background-color: #e8e8e8 !important;
           span {
-            background: #ffffff;
             width: auto;
             display: inline-block;
             padding: 2px 10px;
-            
             margin: auto;
             position: absolute;
-            left: 35.5vw;
-            border: 1px solid #c3c3c3;
             color: #202429;
             border-radius: 5px;
+            &.absentCntr {
+              background: rgba(255, 0, 0, 0.2);
+              border: 1px solid rgba(255, 0, 0, 0.5);
+              left: 35.5vw;
+            }
+            &.paidLeaveCntr {
+              background: rgba(0, 186, 190, 0.2);
+              border: 1px solid rgba(0, 186, 190, 0.5);
+              left: 34.8vw;
+            }
+            &.unPaidLeaveCntr {
+              background: rgba(255, 0, 0, 0.2);
+              border: 1px solid rgba(255, 0, 0, 0.5);
+              left: 35.5vw;
+            }
+            &.holidayCntr {
+              background: rgba(0, 17, 255, 0.2);
+              border: 1px solid rgba(0, 17, 255, 0.5);
+              left: 35.3vw;
+            }
+            &.weekOffCntr {
+              background: rgba(0, 0, 0, 0.2);
+              border: 1px solid rgba(0, 0, 0, 0.5);
+              left: 34.9vw;
+            }
           }
         }
       }
