--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1417,7 +1417,11 @@
   max-height: 30px !important;
   padding: 0;
 }
-
+.mandatory {
+  .ui.selection.dropdown {
+    border: 1px solid rgb(225, 173, 70);
+  }
+}
 .ui.search.dropdown > .text {
   white-space: nowrap;
   overflow: hidden;
