--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -38,6 +38,8 @@ body {
   font-size: 0.8em !important; }
   :global .btn i {
     text-shadow: 0px 1px 1px #1a1a1a; }
+  :global .btn .style_Label {
+    font-size: 1em; }
 
 :global .btn:hover {
   cursor: pointer;
