--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
@@ -1,5 +1,14 @@
 .hrTimeSheet {
   margin-bottom: 80px; }
+  .hrTimeSheet .noTimeSheetData {
+    text-align: center;
+    color: rgba(0, 0, 0, 0.1); }
+    .hrTimeSheet .noTimeSheetData h1 {
+      margin-top: 30px; }
+    .hrTimeSheet .noTimeSheetData i {
+      font-size: 17em;
+      margin: 9vh;
+      color: rgba(0, 0, 0, 0.04); }
   .hrTimeSheet .weekdaysDiv i {
     cursor: pointer; }
     .hrTimeSheet .weekdaysDiv i:hover {
