--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
@@ -1,4 +1,17 @@
 .hrTimeSheet {
+  .noTimeSheetData {
+    text-align: center;
+    color: rgba(0, 0, 0, 0.1);
+    h1 {
+      margin-top: 30px;
+    }
+    i {
+      font-size: 17em;
+      margin: 9vh;
+      color: rgba(0, 0, 0, 0.04);
+    }
+  }
+
   margin-bottom: 80px;
   .weekdaysDiv {
     i {
