--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1026,6 +1026,12 @@
 .mandatory .ui.selection.dropdown {
   border: 1px solid #e1ad46; }
 
+.ui.search.dropdown .menu {
+  border-color: #cccccc !important;
+  max-height: 17vh;
+  width: max-content;
+  max-width: calc(100% + 100px); }
+
 .ui.search.dropdown > .text {
   white-space: nowrap;
   overflow: hidden;
