--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
@@ -25,10 +25,17 @@
     }
   }
   .WeeklyTimeProgress {
+    max-height: 50vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+
     .dailyTimeProgress {
       border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
       padding-top: 10px;
       padding-bottom: 10px;
+      .col-9 {
+        padding-right: 0;
+      }
       .progress {
         height: 0.5rem;
         margin-top: 0.6rem;
@@ -87,6 +94,8 @@
         height: 0.3rem;
         .progress-bar {
           background-color: #e8e8e8 !important;
+          position: inherit;
+          left: 10px;
           span {
             width: auto;
             display: inline-block;
@@ -130,5 +139,149 @@
         border-bottom: none;
       }
     }
+  }
+
+  .ruler {
+    position: relative;
+    width: 100%;
+    margin: 5px 0;
+    height: 14px;
+  }
+  .ruler .cm,
+  .ruler .mm {
+    position: absolute;
+    border-left: 1px solid #555;
+    height: 14px;
+    width: 10%;
+  }
+  .ruler .cm:after {
+    position: absolute;
+    left: -4px;
+    bottom: -15px;
+    font: 11px/1 sans-serif;
+  }
+  .ruler .mm {
+    height: 5px;
+  }
+  .ruler .mm:nth-of-type(5) {
+    height: 10px;
+  }
+  .ruler .cm:nth-of-type(1) {
+    left: 0%;
+  }
+  .ruler .cm:nth-of-type(1):after {
+    content: "00:00";
+  }
+  .ruler .cm:nth-of-type(2) {
+    left: 8.33333333333%;
+  }
+  .ruler .cm:nth-of-type(2):after {
+    content: "02:00";
+  }
+  .ruler .cm:nth-of-type(3) {
+    left: 16.6666666667%;
+  }
+  .ruler .cm:nth-of-type(3):after {
+    content: "04:00";
+  }
+  .ruler .cm:nth-of-type(4) {
+    left: 25%;
+  }
+  .ruler .cm:nth-of-type(4):after {
+    content: "06:00";
+  }
+  .ruler .cm:nth-of-type(5) {
+    left: 33.3333333333%;
+  }
+  .ruler .cm:nth-of-type(5):after {
+    content: "08:00";
+  }
+  .ruler .cm:nth-of-type(6) {
+    left: 41.6666666667%;
+  }
+  .ruler .cm:nth-of-type(6):after {
+    content: "10:00";
+  }
+  .ruler .cm:nth-of-type(7) {
+    left: 50%;
+  }
+  .ruler .cm:nth-of-type(7):after {
+    content: "12:00";
+  }
+  .ruler .cm:nth-of-type(8) {
+    left: 58.3333333333%;
+  }
+  .ruler .cm:nth-of-type(8):after {
+    content: "14:00";
+  }
+  .ruler .cm:nth-of-type(9) {
+    left: 66.6666666666%;
+  }
+  .ruler .cm:nth-of-type(9):after {
+    content: "16:00";
+  }
+  .ruler .cm:nth-of-type(10) {
+    left: 75%;
+  }
+  .ruler .cm:nth-of-type(10):after {
+    content: "18:00";
+  }
+  .ruler .cm:nth-of-type(11) {
+    left: 83.3333333333%;
+  }
+  .ruler .cm:nth-of-type(11):after {
+    content: "20:00";
+  }
+  .ruler .cm:nth-of-type(12) {
+    left: 91.6666666666%;
+  }
+  .ruler .cm:nth-of-type(12):after {
+    content: "22:00";
+  }
+  .ruler .cm:nth-of-type(13) {
+    left: 100%;
+  }
+  .ruler .cm:nth-of-type(13):after {
+    content: "24:00";
+  }
+  .ruler .mm:nth-of-type(1) {
+    left: 8.33333333333%;
+  }
+  .ruler .mm:nth-of-type(2) {
+    left: 16.6666666667%;
+  }
+  .ruler .mm:nth-of-type(3) {
+    left: 25%;
+  }
+  .ruler .mm:nth-of-type(4) {
+    left: 33.3333333333%;
+  }
+  .ruler .mm:nth-of-type(5) {
+    left: 41.6666666667%;
+  }
+  .ruler .mm:nth-of-type(6) {
+    left: 50%;
+  }
+  .ruler .mm:nth-of-type(7) {
+    left: 58.3333333333%;
+  }
+  .ruler .mm:nth-of-type(8) {
+    left: 66.6666666666%;
+  }
+  .ruler .mm:nth-of-type(9) {
+    left: 75%;
+  }
+  .ruler .mm:nth-of-type(10) {
+    left: 83.3333333333%;
+  }
+  .ruler .mm:nth-of-type(11) {
+    left: 91.6666666666%;
+  }
+  .ruler .mm:nth-of-type(12) {
+    left: 100%;
+  }
+  #mentionme {
+    text-align: center;
+    margin-top: 10%;
   }
 }
