--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
@@ -6,8 +6,8 @@
     .hrTimeSheet .noTimeSheetData h1 {
       margin-top: 30px; }
     .hrTimeSheet .noTimeSheetData i {
-      font-size: 17em;
-      margin: 9vh;
+      font-size: 16em;
+      margin: 4vh 0 6vh;
       color: rgba(0, 0, 0, 0.04); }
   .hrTimeSheet .weekdaysDiv i {
     cursor: pointer; }
@@ -16,60 +16,63 @@
   .hrTimeSheet .weekdaysDiv span {
     margin: 0 10px; }
   .hrTimeSheet .WeeklyTimeProgress {
-    max-height: 50vh;
+    max-height: 53vh;
     overflow-x: hidden;
-    overflow-y: auto; }
+    overflow-y: auto;
+    padding-bottom: 20px; }
     .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress {
       border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
       padding-top: 10px;
       padding-bottom: 10px; }
       .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 {
         padding-right: 0; }
-      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress {
-        height: 0.5rem;
-        margin-top: 0.6rem; }
-        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span {
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails span {
+          color: #fff;
+          font-size: 0.8em;
           background: rgba(0, 0, 0, 0.7);
           position: absolute;
           z-index: 9;
-          top: -22px;
+          top: 22px;
           padding: 2px 5px;
           border-radius: 5px;
           display: none; }
-          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span b {
+          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails span b {
             display: inline-block;
             text-align: center;
             border-left: 1px solid rgba(255, 255, 255, 0.5);
             padding-left: 5px;
             margin-left: 5px; }
-          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span .lateTime {
+          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails span .lateTime {
             color: #ff5c40; }
-          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span .OverTime {
+          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails span .OverTime {
             color: #17d217; }
-          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails span::after {
+          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails span::after {
             content: " ";
             position: absolute;
-            top: 100%;
+            bottom: 100%;
             /* At the bottom of the tooltip */
             left: 50%;
             margin-left: -5px;
             border-width: 5px;
             border-style: solid;
-            border-color: rgba(0, 0, 0, 0.7) transparent transparent transparent; }
-        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails .checkIn {
+            border-color: transparent transparent rgba(0, 0, 0, 0.7) transparent; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails .checkIn {
           left: 15px; }
-        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails .totalHr {
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails .totalHr {
           left: 42.5%; }
-        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .tooltipDetails .checkOut {
-          right: 15px; }
-        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress:hover span {
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails .checkOut {
+          right: 0; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9:hover span {
           display: block; }
+      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress {
+        height: 0.5rem;
+        margin-top: 0.6rem; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .progress-bar {
+          position: relative; }
       .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr {
         height: 0.3rem; }
         .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress-bar {
-          background-color: #e8e8e8 !important;
-          position: inherit;
-          left: 10px; }
+          background-color: #e8e8e8 !important; }
           .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress-bar span {
             width: auto;
             display: inline-block;
