--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.css
@@ -24,9 +24,20 @@
       border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
       padding-top: 10px;
       padding-bottom: 10px; }
-      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 {
+      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr {
+        height: 0.3rem;
         padding-right: 0; }
-        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails span {
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress {
+          height: 0.5rem;
+          margin-top: 0.6rem; }
+          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress .progress-bar {
+            position: relative;
+            background-color: #e8e8e8; }
+          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress .bg-default {
+            background-color: #e7ecef !important; }
+          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress:last-child {
+            border-bottom: none; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .tooltipDetails span {
           color: #fff;
           font-size: 0.8em;
           background: rgba(0, 0, 0, 0.7);
@@ -36,17 +47,22 @@
           padding: 2px 5px;
           border-radius: 5px;
           display: none; }
-          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails span b {
+          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .tooltipDetails span i {
+            text-align: center;
+            text-transform: uppercase;
+            font-style: normal;
+            display: inline-block;
+            width: 100%;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.5); }
+          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .tooltipDetails span b {
             display: inline-block;
             text-align: center;
-            border-left: 1px solid rgba(255, 255, 255, 0.5);
-            padding-left: 5px;
-            margin-left: 5px; }
-          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails span .lateTime {
+            margin-left: 2px; }
+          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .tooltipDetails span .lateTime {
             color: #ff5c40; }
-          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails span .OverTime {
+          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .tooltipDetails span .OverTime {
             color: #17d217; }
-          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails span::after {
+          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .tooltipDetails span::after {
             content: " ";
             position: absolute;
             bottom: 100%;
@@ -56,55 +72,44 @@
             border-width: 5px;
             border-style: solid;
             border-color: transparent transparent rgba(0, 0, 0, 0.7) transparent; }
-        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails .checkIn {
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .tooltipDetails .checkIn {
           left: 15px; }
-        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails .totalHr {
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .tooltipDetails .totalHr {
           left: 42.5%; }
-        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9 .tooltipDetails .checkOut {
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .tooltipDetails .checkOut {
           right: 0; }
-        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .col-9:hover span {
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr:hover span {
           display: block; }
-      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress {
-        height: 0.5rem;
-        margin-top: 0.6rem; }
-        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .progress .progress-bar {
-          position: relative; }
-      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr {
-        height: 0.3rem; }
-        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress-bar {
-          background-color: #e8e8e8 !important; }
-          .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress-bar span {
-            width: auto;
-            display: inline-block;
-            padding: 2px 10px;
-            margin: auto;
-            position: absolute;
-            color: #202429;
-            border-radius: 5px; }
-            .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress-bar span.absentCntr {
-              background: rgba(255, 0, 0, 0.2);
-              border: 1px solid rgba(255, 0, 0, 0.5);
-              left: 35.5vw; }
-            .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress-bar span.paidLeaveCntr {
-              background: rgba(0, 186, 190, 0.2);
-              border: 1px solid rgba(0, 186, 190, 0.5);
-              left: 34.8vw; }
-            .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress-bar span.unPaidLeaveCntr {
-              background: rgba(255, 0, 0, 0.2);
-              border: 1px solid rgba(255, 0, 0, 0.5);
-              left: 35.5vw; }
-            .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress-bar span.holidayCntr {
-              background: rgba(0, 17, 255, 0.2);
-              border: 1px solid rgba(0, 17, 255, 0.5);
-              left: 35.3vw; }
-            .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .dayTypeCntr .progress-bar span.weekOffCntr {
-              background: rgba(0, 0, 0, 0.2);
-              border: 1px solid rgba(0, 0, 0, 0.5);
-              left: 34.9vw; }
-      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress .bg-default {
-        background-color: #e7ecef !important; }
-      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress:last-child {
-        border-bottom: none; }
+      .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress span {
+        width: auto;
+        display: inline-block;
+        padding: 2px 10px;
+        margin: auto;
+        position: absolute;
+        color: #202429;
+        border-radius: 5px;
+        z-index: 9;
+        font-size: 0.9em; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress span.absentCntr {
+          background: rgba(255, 0, 0, 0.2);
+          border: 1px solid rgba(255, 0, 0, 0.5);
+          left: 35vw; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress span.paidLeaveCntr {
+          background: rgba(0, 186, 190, 0.2);
+          border: 1px solid rgba(0, 186, 190, 0.5);
+          left: 34.8vw; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress span.unPaidLeaveCntr {
+          background: rgba(255, 0, 0, 0.2);
+          border: 1px solid rgba(255, 0, 0, 0.5);
+          left: 34vw; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress span.holidayCntr {
+          background: rgba(0, 17, 255, 0.2);
+          border: 1px solid rgba(0, 17, 255, 0.5);
+          left: 35.3vw; }
+        .hrTimeSheet .WeeklyTimeProgress .dailyTimeProgress span.weekOffCntr {
+          background: rgba(0, 0, 0, 0.2);
+          border: 1px solid rgba(0, 0, 0, 0.5);
+          left: 34.9vw; }
   .hrTimeSheet .ruler {
     position: relative;
     width: 100%;
