--- a/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
+++ b/client/src/Components/PayrollManagement/AttendanceMgmt/WeeklyAttendance/WeeklyAttendance.scss
@@ -34,9 +34,23 @@
       border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
       padding-top: 10px;
       padding-bottom: 10px;
-      .col-9 {
+      .dayTypeCntr {
+        height: 0.3rem;
         padding-right: 0;
-
+        .progress {
+          height: 0.5rem;
+          margin-top: 0.6rem;
+          .progress-bar {
+            position: relative;
+            background-color: #e8e8e8;
+          }
+          .bg-default {
+            background-color: #e7ecef !important;
+          }
+          &:last-child {
+            border-bottom: none;
+          }
+        }
         .tooltipDetails {
           span {
             color: #fff;
@@ -48,12 +62,18 @@
             padding: 2px 5px;
             border-radius: 5px;
             display: none;
+            i {
+              text-align: center;
+              text-transform: uppercase;
+              font-style: normal;
+              display: inline-block;
+              width: 100%;
+              border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+            }
             b {
               display: inline-block;
               text-align: center;
-              border-left: 1px solid rgba(255, 255, 255, 0.5);
-              padding-left: 5px;
-              margin-left: 5px;
+              margin-left: 2px;
             }
             .lateTime {
               color: #ff5c40;
@@ -89,59 +109,42 @@
           }
         }
       }
-      .progress {
-        height: 0.5rem;
-        margin-top: 0.6rem;
-        .progress-bar {
-          position: relative;
+
+      span {
+        width: auto;
+        display: inline-block;
+        padding: 2px 10px;
+        margin: auto;
+        position: absolute;
+        color: #202429;
+        border-radius: 5px;
+        z-index: 9;
+        font-size: 0.9em;
+        &.absentCntr {
+          background: rgba(255, 0, 0, 0.2);
+          border: 1px solid rgba(255, 0, 0, 0.5);
+          left: 35vw;
         }
-      }
-      .dayTypeCntr {
-        height: 0.3rem;
-        .progress-bar {
-          background-color: #e8e8e8 !important;
-          //  position: relative;
-          span {
-            width: auto;
-            display: inline-block;
-            padding: 2px 10px;
-            margin: auto;
-            position: absolute;
-            color: #202429;
-            border-radius: 5px;
-            &.absentCntr {
-              background: rgba(255, 0, 0, 0.2);
-              border: 1px solid rgba(255, 0, 0, 0.5);
-              left: 35.5vw;
-            }
-            &.paidLeaveCntr {
-              background: rgba(0, 186, 190, 0.2);
-              border: 1px solid rgba(0, 186, 190, 0.5);
-              left: 34.8vw;
-            }
-            &.unPaidLeaveCntr {
-              background: rgba(255, 0, 0, 0.2);
-              border: 1px solid rgba(255, 0, 0, 0.5);
-              left: 35.5vw;
-            }
-            &.holidayCntr {
-              background: rgba(0, 17, 255, 0.2);
-              border: 1px solid rgba(0, 17, 255, 0.5);
-              left: 35.3vw;
-            }
-            &.weekOffCntr {
-              background: rgba(0, 0, 0, 0.2);
-              border: 1px solid rgba(0, 0, 0, 0.5);
-              left: 34.9vw;
-            }
-          }
+        &.paidLeaveCntr {
+          background: rgba(0, 186, 190, 0.2);
+          border: 1px solid rgba(0, 186, 190, 0.5);
+          left: 34.8vw;
         }
-      }
-      .bg-default {
-        background-color: #e7ecef !important;
-      }
-      &:last-child {
-        border-bottom: none;
+        &.unPaidLeaveCntr {
+          background: rgba(255, 0, 0, 0.2);
+          border: 1px solid rgba(255, 0, 0, 0.5);
+          left: 34vw;
+        }
+        &.holidayCntr {
+          background: rgba(0, 17, 255, 0.2);
+          border: 1px solid rgba(0, 17, 255, 0.5);
+          left: 35.3vw;
+        }
+        &.weekOffCntr {
+          background: rgba(0, 0, 0, 0.2);
+          border: 1px solid rgba(0, 0, 0, 0.5);
+          left: 34.9vw;
+        }
       }
     }
   }
