--- a/client/src/Components/EmployeeManagement/EmployeeDocuments/EmployeeDocuments.css
+++ b/client/src/Components/EmployeeManagement/EmployeeDocuments/EmployeeDocuments.css
@@ -1,2 +1,35 @@
-#employeeDocumGrid_Cntr .ReactTable {
-  max-height: 60vh !important; }
+.EmployeeDocumentsScreen {
+  /* layout.css Style */
+  /* skin.css Style*/ }
+  .EmployeeDocumentsScreen .upload-drop-zone {
+    height: 200px;
+    border-width: 2px;
+    margin-bottom: 20px; }
+  .EmployeeDocumentsScreen .upload-drop-zone {
+    color: #ccc;
+    border-style: dashed;
+    border-color: #ccc;
+    line-height: 200px;
+    text-align: center; }
+  .EmployeeDocumentsScreen .upload-drop-zone.drop {
+    color: #222;
+    border-color: #222; }
+  .EmployeeDocumentsScreen .image-preview-input {
+    position: relative;
+    overflow: hidden;
+    margin: 0px;
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc; }
+  .EmployeeDocumentsScreen .image-preview-input input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0); }
+  .EmployeeDocumentsScreen .image-preview-input-title {
+    margin-left: 2px; }
