--- a/client/src/Components/EmployeeManagement/SelfService/selfPersonalDetails/selfPersonalDetails.scss
+++ b/client/src/Components/EmployeeManagement/SelfService/selfPersonalDetails/selfPersonalDetails.scss
@@ -1,4 +1,4 @@
-.selfPersonalDetails {
+.SelfPersonalDetails {
   h5 {
     margin: 0 0 10px;
     padding-bottom: 2px;
@@ -70,13 +70,15 @@
       margin-top: 15px;
     }
   }
-  h6 {
-  }
-  .selfServiceModule
-    .EmployeeProfile
-    .EmployeeInfo-Top
-    .EmployeeImg
-    .image-drop-area
-    img {
+  .EmployeeImgEdit {
+    background: #fff;
+    border: 1px solid #d6d6d6;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    padding: 15px;
+    .image-drop-area {
+      width: 150px;
+      margin: auto;
+    }
   }
 }
