--- a/client/src/Components/EmployeeManagement/EmployeeDocuments/EmployeeDocuments.css
+++ b/client/src/Components/EmployeeManagement/EmployeeDocuments/EmployeeDocuments.css
@@ -1,35 +1,41 @@
-.EmployeeDocumentsScreen {
-  /* layout.css Style */
-  /* skin.css Style*/ }
-  .EmployeeDocumentsScreen .upload-drop-zone {
-    height: 200px;
-    border-width: 2px;
-    margin-bottom: 20px; }
-  .EmployeeDocumentsScreen .upload-drop-zone {
-    color: #ccc;
-    border-style: dashed;
-    border-color: #ccc;
-    line-height: 200px;
-    text-align: center; }
-  .EmployeeDocumentsScreen .upload-drop-zone.drop {
-    color: #222;
-    border-color: #222; }
-  .EmployeeDocumentsScreen .image-preview-input {
-    position: relative;
-    overflow: hidden;
-    margin: 0px;
-    color: #333;
-    background-color: #fff;
-    border-color: #ccc; }
-  .EmployeeDocumentsScreen .image-preview-input input[type="file"] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 0;
-    padding: 0;
-    font-size: 20px;
-    cursor: pointer;
-    opacity: 0;
-    filter: alpha(opacity=0); }
-  .EmployeeDocumentsScreen .image-preview-input-title {
-    margin-left: 2px; }
+.EmployeeDocumentsScreen .documentFor {
+  min-height: 70vh;
+  overflow-y: auto;
+  overflow-x: hidden; }
+  .EmployeeDocumentsScreen .documentFor .list-group-item {
+    text-align: left;
+    cursor: pointer; }
+  .EmployeeDocumentsScreen .documentFor .list-group-item.active {
+    background-color: #34b8bc;
+    border-color: #34b8bc; }
+    .EmployeeDocumentsScreen .documentFor .list-group-item.active .badge-primary {
+      background-color: #fff;
+      color: #34b8bc; }
+  .EmployeeDocumentsScreen .documentFor .badge-primary {
+    background-color: #34b8bc; }
+  .EmployeeDocumentsScreen .documentFor span {
+    display: block; }
+
+.EmployeeDocumentsScreen .upload-drop-zone {
+  cursor: grab;
+  height: 150px;
+  border-width: 2px;
+  margin-bottom: 20px;
+  color: #ccc;
+  border-style: dashed;
+  border-color: #ccc;
+  line-height: 1em;
+  text-align: center;
+  padding: 0 10px 10px;
+  padding-top: 3em; }
+  .EmployeeDocumentsScreen .upload-drop-zone b {
+    font-weight: 700;
+    color: #000;
+    margin-bottom: 10px;
+    display: inline-block; }
+  .EmployeeDocumentsScreen .upload-drop-zone:hover {
+    border-color: #34b8bc;
+    background: #cbf0f1; }
+
+.EmployeeDocumentsScreen #EmployeeDocumentGrid .ReactTable {
+  max-height: 50vh !important; }
