--- a/client/src/Components/EmployeeManagement/EmployeeDocuments/EmployeeDocuments.scss
+++ b/client/src/Components/EmployeeManagement/EmployeeDocuments/EmployeeDocuments.scss
@@ -1,44 +1,55 @@
+@import "../../../styles/algaehCssVariables.scss";
 .EmployeeDocumentsScreen {
-  /* layout.css Style */
-  .upload-drop-zone {
-    height: 200px;
-    border-width: 2px;
-    margin-bottom: 20px;
+  .documentFor {
+    min-height: 70vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+    .list-group-item {
+      text-align: left;
+      cursor: pointer;
+    }
+    .list-group-item.active {
+      background-color: $primary-color;
+      border-color: $primary-color;
+      .badge-primary {
+        background-color: $color-white;
+        color: $primary-color;
+      }
+    }
+    .badge-primary {
+      background-color: $primary-color;
+    }
+    span {
+      display: block;
+    }
   }
 
-  /* skin.css Style*/
   .upload-drop-zone {
+    cursor: grab;
+    height: 150px;
+    border-width: 2px;
+    margin-bottom: 20px;
     color: #ccc;
     border-style: dashed;
     border-color: #ccc;
-    line-height: 200px;
+    line-height: 1em;
     text-align: center;
+    padding: 0 10px 10px;
+    padding-top: 3em;
+    b {
+      font-weight: 700;
+      color: #000;
+      margin-bottom: 10px;
+      display: inline-block;
+    }
+    &:hover {
+      border-color: $primary-color;
+      background: lighten($primary-color, 40%);
+    }
   }
-  .upload-drop-zone.drop {
-    color: #222;
-    border-color: #222;
-  }
-
-  .image-preview-input {
-    position: relative;
-    overflow: hidden;
-    margin: 0px;
-    color: #333;
-    background-color: #fff;
-    border-color: #ccc;
-  }
-  .image-preview-input input[type="file"] {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 0;
-    padding: 0;
-    font-size: 20px;
-    cursor: pointer;
-    opacity: 0;
-    filter: alpha(opacity=0);
-  }
-  .image-preview-input-title {
-    margin-left: 2px;
+  #EmployeeDocumentGrid {
+    .ReactTable {
+      max-height: 50vh !important;
+    }
   }
 }
