--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1408,6 +1408,46 @@
       padding: 15px;
     }
   }
+  .lab_section {
+    font-weight: normal;
+  }
+
+  .imp {
+    color: #ff063e;
+  }
+
+  .txt-fld {
+    background-color: #fbfbfb;
+    width: 100%;
+  }
+
+  .select-fld {
+    padding-left: 8px;
+    background-color: #fbfbfb;
+    width: 100%;
+  }
+
+  .table-details {
+    text-align: center;
+  }
+
+  .table-hover tbody tr:hover {
+    td,
+    th {
+      background-color: #fcffde;
+    }
+  }
+
+  .form-details {
+    margin-top: 20px;
+    margin-left: "auto";
+    margin-right: "auto";
+  }
+
+  th,
+  td {
+    border-right: 1px solid #ffffff;
+  }
 }
 
 //Semantic UI CSS Owerwrite Start Here //
