--- a/client/src/Components/PatientProfile/patientprofile.scss
+++ b/client/src/Components/PatientProfile/patientprofile.scss
@@ -19,7 +19,6 @@
       button {
         height: 60px;
         border: 1px solid #e1e1e1;
-        
       }
       i {
         display: block;
@@ -61,19 +60,16 @@
       padding-right: 10px;
       min-height: 57px;
       h6 {
-        
         margin-bottom: 2px;
         color: #000;
         line-height: 1.2rem;
       }
       p {
-        
         margin: 0;
         padding: 0;
       }
     }
     .patientDemographic {
-      
       line-height: 1.3rem;
       border-right: 1px solid #e1e1e1;
       padding-left: 10px;
@@ -87,7 +83,6 @@
       }
     }
     .patientHospitalDetail {
-      
       line-height: 1.3rem;
       border-right: 1px solid #e1e1e1;
       padding-left: 10px;
@@ -101,7 +96,6 @@
       }
     }
     .patientVital {
-      
       max-width: 33%;
       line-height: 1.3rem;
       padding-left: 10px;
@@ -123,7 +117,7 @@
       button {
         height: 60px;
         border: 1px solid #e1e1e1;
-        
+
         margin-left: 0;
       }
       i {
@@ -138,7 +132,7 @@
     padding: 0;
     width: 100%;
     color: #797979;
-    
+
     text-transform: uppercase;
     position: fixed;
     top: 123px;
@@ -157,7 +151,6 @@
           transform: scaleX(1);
         }
         span {
-          
           text-transform: uppercase;
           padding: 9px 15px 8px;
           color: #858585;
@@ -175,6 +168,7 @@
             display: none !important;
             border: none !important;
             cursor: pointer;
+            border: 1px solid red;
           }
         }
       }
@@ -218,7 +212,6 @@
             border-bottom: 1px solid #3f9c90;
             margin-bottom: 10px;
             padding-bottom: 5px;
-            
           }
           .listofA-D-D {
             display: inline-block;
@@ -231,7 +224,7 @@
             margin-bottom: 3px;
             border-radius: 20px;
             background: #3f9c91;
-            
+
             white-space: normal;
           }
           p {
@@ -278,7 +271,7 @@
     span {
       padding: 7px 10px;
       text-align: left;
-      
+
       display: block;
       cursor: pointer;
     }
